# mc-server-installer

./: .gitignore  README.md  generate_schema.py  main.py  manifest_schema.json  model.py  modrinth.py  papermc_fill.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  prepare-release.yml
app/: generate_schema.py  main.py  manifest_schema.json  model.py  modrinth.py  papermc_fill.py  registry.py  regunion.py  requirements.txt
mcsi/: __version__.py  actions.py  common_registries.py  core.py  installer.py  labrinth.py  main.py  manifest_schema.json  model.py  registry.py  regunion.py  requirements-poetry.txt  utils.py
mcsi/providers/: bungeecord.py  direct_url.py  github_provider.py  jenkins_provider.py  modrinth.py  paper.py  purpur.py
mcsi/providers/api/: github_provider.py  jenkins_models.py  jenkins_provider.py  papyrus.py
scripts/: write_version.py
tests/: test_lateinit.py  test_papyrus.py
