[project]
name = "mcsi"
version = "2.1.2"
description = "Minecraft server installer based on manifest files"
authors = [
    {name = "BoBkiNN",email = "78136575+BoBkiNN@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (==2.9.2)",
    "json5 (==0.12.1)",
    "pyyaml (==6.0.2)",
    "click (==8.1.3)",
    "colorlog (>=6.10.1,<7.0.0)",
    "python-jenkins (>=1.8.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "asteval (>=1.0.7,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
