[project]
name = "mcsi"
version = "2.2.0"
description = "Minecraft server installer based on manifest files"
authors = [
    {name = "BoBkiNN",email = "78136575+BoBkiNN@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "pydantic (>=2.10.0,<2.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "json5 (>=0.12.1,<0.13.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "python-jenkins (>=1.8.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "asteval (>=1.0.7,<2.0.0)",
]

[tool.poetry.scripts]
sync-ver = "scripts.write_version:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[dependency-groups]
dev = [
    "toml (>=0.10.2,<0.11.0)",
    "pytest (>=9.0.1,<10.0.0)"
]
